# seo-intelligence

./: .env.example  .gitignore  .mcp.json  LICENSE  PLUGIN_HOMEPAGE.md  README.md  SUBMISSION_GUIDE.md  WORKFLOWS.md  accessibility_seo.py  ai_search.py  analyzer.py  conftest.py  content.py  crawler.py  ecommerce_seo.py  entity.py  international_seo.py  local_seo.py  media_seo.py  models.py  predictive.py  pyproject.toml  pytest_results.txt  serp.py  server.py  technical.py  test_errors.txt  test_live.py
.claude-plugin/: plugin.json
agents/: competitor-analyzer.md  content-strategist.md  seo-auditor.md
commands/: competitor-gap.md  content-brief.md  generate-schema.md  keyword-cluster.md  ranking-plan.md  seo-audit.md  seo-check.md  technical-audit.md
skills/aeo-visibility/: SKILL.md
skills/competitor-analysis/: SKILL.md
skills/content-strategy/: SKILL.md
skills/ecommerce-seo/: SKILL.md
skills/international-seo/: SKILL.md
skills/keyword-research/: SKILL.md
skills/local-seo/: SKILL.md
skills/on-page-seo/: SKILL.md
skills/ranking-plan/: SKILL.md
skills/schema-markup/: SKILL.md
skills/technical-seo/: SKILL.md
tests/: __init__.py  test_accessibility.py  test_ai_search.py  test_analyzer.py  test_content.py  test_crawler.py  test_ecommerce_seo.py  test_entity.py  test_international_seo.py  test_local_seo.py  test_media_seo.py  test_predictive.py  test_serp.py  test_technical.py
